# db-chatapp

./: Dockerfile  README.md  db.py  event_company_people.db  main.py  pyproject.toml
agent/: agent.py
config/: settings.py
data/: preprocessed_company_info.csv  preprocessed_event_info.csv  preprocessed_people_info.csv
database/: README.md  sql.ipynb  text_to_sql_app.ipynb
test/: test.md  test.py
utils/: DBconnect.py
